--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/home_background"
+    android:background="@android:color/white"
     android:orientation="vertical"
     android:weightSum="1"
     tools:context="com.effone.reservopia.MainActivity">
 
+    <include layout="@layout/fragment_common_header" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".72"
+        android:layout_weight=".62"
         android:orientation="horizontal">
 
         <!--  first section we are handling her-->
@@ -20,21 +21,38 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight=".49"
+            android:layout_marginTop="10dp"
             android:orientation="vertical"
             android:padding="5dp">
 
             <ImageView
                 android:id="@+id/img_icon"
                 android:layout_width="match_parent"
+                android:paddingTop="10dp"
                 android:layout_height="0dp"
                 android:layout_weight=".25"
-                android:src="@mipmap/ic_launcher" />
-
+                android:background="@android:color/darker_gray"
+                android:src="@mipmap/logo" />
+            <TextView
+                android:id="@+id/tv_comapany_name"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight=".15"
+                android:gravity="center"
+                android:textColor="@android:color/black"
+                android:background="@android:color/darker_gray"
+                android:text="Effone Technolgies"
+                android:textSize="@dimen/about" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/divider" />
             <TextView
                 android:id="@+id/tv_dateandtime"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight=".25"
+                android:layout_weight=".15"
+                android:textColor="@android:color/black"
                 android:gravity="right|center"
                 android:textSize="@dimen/date_time" />
 
@@ -43,8 +61,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight=".10"
-                android:drawableRight="@mipmap/ic_info"
                 android:gravity="left|center"
+                android:textColor="@android:color/black"
                 android:text="About"
                 android:textSize="@dimen/heading" />
 
@@ -60,7 +78,9 @@
         <View
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".02"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight=".005"
             android:background="@color/divider" />
 
         <!--  seconf section we are handling her-->
@@ -68,23 +88,26 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight=".49"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="5dp">
 
             <TextView
                 android:id="@+id/tv_booking_app"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.33"
-                android:drawableTop="@mipmap/ic_launcher"
-                android:gravity="bottom|center"
-                android:padding="5dp"
+                android:drawableTop="@mipmap/ic_booking_appiontment"
+                android:gravity="center"
+                android:padding="10dp"
+                android:textColor="@android:color/black"
                 android:text="@string/booking_app"
+                android:textAlignment="center"
                 android:textSize="@dimen/heading" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight=".01"
+                android:layout_weight=".005"
                 android:background="@color/divider" />
 
             <TextView
@@ -93,15 +116,17 @@
                 android:layout_height="0dp"
                 android:layout_weight="0.33"
                 android:drawableTop="@mipmap/ic_history"
-                android:gravity="bottom|center"
-                android:padding="5dp"
+                android:gravity="center"
+                android:padding="10dp"
                 android:text="@string/histroy"
+                android:textColor="@android:color/black"
+                android:textAlignment="center"
                 android:textSize="@dimen/heading" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight=".01"
+                android:layout_weight=".005"
                 android:background="@color/divider" />
 
             <TextView
@@ -110,34 +135,54 @@
                 android:layout_height="0dp"
                 android:layout_weight="0.33"
                 android:drawableTop="@mipmap/ic_contact_us"
-                android:gravity="bottom|center"
-                android:padding="5dp"
+                android:gravity="center"
+                android:padding="10dp"
                 android:text="@string/contact_us"
+                android:textColor="@android:color/black"
+                android:textAlignment="center"
                 android:textSize="@dimen/heading" />
         </LinearLayout>
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".003"
+        android:background="@color/divider" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".28"
-        android:weightSum="1"
+        android:layout_weight=".38"
+        android:orientation="vertical"
         android:padding="5dp"
-        android:orientation="vertical">
+        android:weightSum="1"
+        >
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.02"
+            android:padding="5dp"
             android:paddingBottom="5dp"
+            android:paddingTop="10dp"
+            android:background="@color/dayName"
             android:text="@string/upcomingAppointment"
-            android:textSize="@dimen/heading" />
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/heading"
+            android:textStyle="bold" />
 
-        <ListView
+        <View
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.98"
-            android:id="@+id/lv_upcomingAppointent"></ListView>
+            android:layout_weight=".005"
+            android:background="@color/divider" />
+
+        <ListView
+            android:id="@+id/lv_upcomingAppointent"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.98"></ListView>
     </LinearLayout>
 </LinearLayout>
