--- a/app/src/main/res/values-normal-xhdpi/dimens.xml
+++ b/app/src/main/res/values-normal-xhdpi/dimens.xml
@@ -2,5 +2,6 @@
 <resources>
     <dimen name="header">22sp</dimen>
     <dimen name="font_size">18sp</dimen>
-    <dimen name="heading">10sp</dimen>
+    <dimen name="heading">11sp</dimen>
+    <dimen name="date_time">16sp</dimen>
 </resources>
