--- a/app/src/main/res/layout/appointment_list_item.xml
+++ b/app/src/main/res/layout/appointment_list_item.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Appointment ID"
+        android:text="@string/confirmation_no"
         android:textSize="18sp"
         />
         <TextView
