--- a/app/src/main/res/layout/date_time_slot.xml
+++ b/app/src/main/res/layout/date_time_slot.xml
@@ -3,11 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/ad_tv_date_time"
-    android:padding="10dp"
+    android:padding="5dp"
     android:textStyle="bold"
     android:gravity="center_vertical"
-    android:drawableTint="@android:color/black"
+    android:drawableTint="@android:color/white"
     android:drawableRight="@drawable/forward"
-    android:textSize="18sp">
+    android:textSize="14sp">
 
 </TextView>
