--- a/app/src/main/res/layout/service_type_list.xml
+++ b/app/src/main/res/layout/service_type_list.xml
@@ -37,7 +37,7 @@
         />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_ser_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/iv_appointment"
