--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008975</color>
-    <color name="colorPrimaryDark">#008975</color>
+    <color name="colorPrimary">#0085c3</color>
+    <color name="colorPrimaryDark">#0083c5</color>
     <color name="colorAccent">#FF4081</color>
     <color name="divider">#D3D3D3</color>
-    <color name="home_background">#42f4eb</color>
-    <color name="dayName">#00AA8D</color>
+    <color name="home_background">#04c7ff</color>
+    <color name="dayName">#04c7ff</color>
     <color name="hedaingColorApp">#FFF0CC</color>
-    <color name="logo_bg">#008975</color>
+    <color name="logo_bg">#04c7ff</color>
+    <color name="black">#000</color>
+
+    <color name="list_back">#5d6d7e</color>
+    <color name="background_home">#eeeeee</color>
 </resources>
