--- a/app/src/main/res/layout/activity_appointment_details.xml
+++ b/app/src/main/res/layout/activity_appointment_details.xml
@@ -450,12 +450,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="Edit Appointment"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:visibility="gone"
+        android:background="@color/home_background"
         android:padding="5dp"
-        android:background="@color/home_background"/>
+        android:text="Edit Appointment"
+        android:textColor="@android:color/white"
+        android:textAlignment="center"
+        android:layout_margin="5dp"
+        android:textSize="20sp"
+        android:visibility="visible" />
 
 
 </RelativeLayout>
