--- a/app/src/main/res/layout/activity_network_error.xml
+++ b/app/src/main/res/layout/activity_network_error.xml
@@ -39,4 +39,22 @@
         app:layout_constraintRight_toRightOf="@+id/imageView"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="260dp" />
+
+    <TextView
+        android:id="@+id/tv_retry"
+        android:layout_width="wrap_content"
+        android:padding="5dp"
+        android:layout_height="wrap_content"
+        android:text="Retry"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.15" />
 </android.support.constraint.ConstraintLayout>
