--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,30 +20,35 @@
                 android:id="@+id/et_email"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:hint="@string/email" />
+                android:hint="@string/email"
+                android:singleLine="true"/>
 
             <CheckBox
+                android:id="@+id/cb_account"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Create A Account"/>
+                android:text="Create A Account" />
 
             <EditText
                 android:id="@+id/et_password"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:hint="@string/password" />
+                android:hint="@string/password"
+                android:singleLine="true"/>
 
             <EditText
                 android:id="@+id/et_conf_pass"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:hint="@string/conf_password" />
+                android:hint="@string/conf_password"
+                android:singleLine="true"/>
 
             <EditText
                 android:id="@+id/et_phone"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:hint="@string/phone" />
+                android:hint="@string/phone"
+                android:singleLine="true"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -55,21 +60,23 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:hint="@string/first" />
+                    android:hint="@string/first"
+                    android:singleLine="true"/>
 
                 <EditText
                     android:id="@+id/et_lastName"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:hint="@string/last" />
+                    android:hint="@string/last"
+                    android:singleLine="true"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:weightSum="1">
-                <EditText
+                <Spinner
                     android:id="@+id/et_title"
                     android:layout_width="0dp"
                     android:layout_weight=".5"
@@ -80,7 +87,8 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:hint="@string/dob" />
+                    android:hint="@string/dob"
+                    android:singleLine="true"/>
 
 
             </LinearLayout>
