--- a/app/src/main/res/layout/activity_appointement_booking.xml
+++ b/app/src/main/res/layout/activity_appointement_booking.xml
@@ -76,6 +76,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.40"
         android:padding="5dp"
+        android:id="@+id/ll_user_reg"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
@@ -95,8 +96,11 @@
         android:layout_weight="0.09"
         android:background="@color/dayName"
         android:gravity="center"
+
         android:text="@string/submit"
-        android:layout_margin="5dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="22dp" />
