--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
                 android:gravity="center"
                 android:textColor="@android:color/white"
                 android:background="@color/logo_bg"
-                android:text="Effone Technolgies"
+                android:text="Effone Technologies"
                 android:textSize="@dimen/about" />
             <View
                 android:layout_width="match_parent"
