--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -120,6 +120,7 @@
                 android:id="@+id/et_address"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
+                android:singleLine="true"
                 android:hint="@string/address" />
 
  <!--           <LinearLayout
