--- a/app/src/main/res/layout/date_time_slot_grid.xml
+++ b/app/src/main/res/layout/date_time_slot_grid.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:id="@+id/ad_tv_date_time"
     android:padding="5dp"
+    android:textColor="@color/black"
     android:textSize="18sp">
 
 </TextView>
