--- a/app/src/main/res/layout/activity_appointement_booking.xml
+++ b/app/src/main/res/layout/activity_appointement_booking.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,25 +7,29 @@
     android:orientation="vertical"
     android:weightSum="1"
     tools:context="com.effone.mobile.Activity.AppointementBookingActivity">
-    <include layout="@layout/fragment_common_header" />
+    <include layout="@layout/fragment_common_header"
+        android:id="@+id/tool_bar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".08"
+        android:layout_height="wrap_content"
+        android:id="@+id/lv_date_time"
         android:weightSum="1"
+        android:orientation="vertical"
+        android:layout_below="@+id/tool_bar"
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="left|center"
             android:text="@string/date_time"
+            android:padding="5dp"
             android:textSize="@dimen/font_size"
             android:layout_weight=".4"/>
         <EditText
             android:id="@+id/et_date"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_weight=".6"
             android:layout_height="40dp"
             android:clickable="true"
@@ -35,23 +39,26 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.37"
+        android:layout_height="wrap_content"
+        android:id="@+id/lv_gridView"
+        android:layout_below="@+id/lv_date_time"
         android:orientation="vertical"
         >
+
         <TextView
-            android:paddingLeft="10dp"
+            android:id="@+id/textView9"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.05"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+
             android:text="@string/time_slot"
             android:textSize="@dimen/font_size" />
+
         <GridView
             android:id="@+id/gv_timeSlots"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="318dp"
             android:gravity="left"
-            android:layout_weight=".27"
             android:numColumns="4"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -61,12 +68,13 @@
 
 
 
-    <TextView
+   <!-- <TextView
         android:id="@+id/tv_registeration_form_details"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.05"
         android:gravity="left|center"
+        android:visibility="invisible"
         android:paddingLeft="10dp"
         android:text="@string/registeration"
         android:textSize="18sp" />
@@ -74,8 +82,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.40"
+        android:layout_weight="0.28"
         android:padding="5dp"
+        android:visibility="invisible"
         android:id="@+id/ll_user_reg"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
@@ -87,21 +96,19 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-    </LinearLayout>
+    </LinearLayout>-->
 
     <TextView
         android:id="@+id/tv_submit"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.09"
+        android:layout_height="40dp"
         android:background="@color/dayName"
         android:gravity="center"
-
         android:text="@string/submit"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textSize="22dp" />
-</LinearLayout>
+        android:textSize="22dp"
+        android:layout_margin="5dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+</RelativeLayout>
