--- a/app/src/main/res/layout/gird_single.xml
+++ b/app/src/main/res/layout/gird_single.xml
@@ -6,6 +6,10 @@
     <TextView
         android:id="@+id/grid_text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_height="40dp"
+        android:text="TextView"
+
+        android:textAlignment="center"
+        android:gravity="center"
+        android:layout_gravity="center"/>
 </LinearLayout>
