--- a/app/src/main/res/layout/activity_appointment_details.xml
+++ b/app/src/main/res/layout/activity_appointment_details.xml
@@ -450,8 +450,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:background="@color/home_background"
-        android:padding="5dp"
+        android:background="@drawable/button_rounded_corner"
+        android:padding="10dp"
         android:text="Edit Appointment"
         android:textColor="@android:color/white"
         android:textAlignment="center"
