--- a/app/src/main/res/layout/fragment_common_header.xml
+++ b/app/src/main/res/layout/fragment_common_header.xml
@@ -35,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:backgroundTint="@android:color/white"
             android:layout_marginRight="10dp"/>
     </LinearLayout>
 
