--- a/app/src/main/res/layout/activity_appointment_details.xml
+++ b/app/src/main/res/layout/activity_appointment_details.xml
@@ -299,16 +299,16 @@
 
             <TextView
                 android:id="@+id/textview20"
-                android:layout_width="0dp"
-                android:layout_weight=".5"
-                android:layout_height="wrap_content"
-                android:text="Address"
                 style="@style/appointmentScreen"
-                android:layout_below="@+id/textView21"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/textView21"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignRight="@+id/textView21"
-                android:layout_alignEnd="@+id/textView21" />
+                android:layout_below="@+id/textView21"
+                android:layout_weight=".5"
+                android:text="Address" />
 
             <TextView
                 android:id="@+id/textView16"
